# doppelganger

./: .gitignore  README.md
dataset/: readme.txt
models/: readme.txt
src/: CMakeLists.txt  dlibfaceextractor.cpp  dlibfaceextractor.h  dlibmatrixdistancel2.h  dlibmatrixhash.h  dnnfacedescriptorcomputer.h  dnnfacedescriptorcomputer_impl.h  enroller.cpp  enroller.h  facedb.h  facedb_impl.h  facedescriptorcomputer.h  faceextractorhelper.h  labeldata.cpp  labeldata.h  main.cpp  myclass.h  networktraits.h  opencvmatdistancel2.h  openface.cpp  openface.h  openface_impl.h  openfacedescriptorcomputer.h  openfacedescriptormetric.h  openfaceextractor.cpp  openfaceextractor.h  openfaceextractor_impl.h  resnet.h  resnetfacedescriptorcomputer.h  resnetfacedescriptormetric.h
